[gd_scene load_steps=3 format=2]

[ext_resource path="res://bonus02/animal/enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://bonus02/enemy_group.gd" type="Script" id=2]

[node name="enemy_group" type="Node2D"]
scale = Vector2( 1.12, 1.12 )
script = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="enemy" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 74.1071, 61.6071 )

[node name="enemy2" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 174.107, 61.607 )

[node name="enemy3" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 274.107, 61.607 )

[node name="enemy4" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 374.107, 61.607 )

[node name="enemy5" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 474.107, 61.607 )

[node name="enemy6" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 574.107, 61.607 )

[node name="enemy7" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 674.107, 61.607 )

[node name="enemy8" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 774.107, 61.607 )

[node name="enemy9" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 874.107, 61.607 )

[node name="enemy10" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 974.107, 61.607 )

[node name="enemy86" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1071.43, 61.607 )

[node name="enemy87" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1171.43, 61.607 )

[node name="enemy88" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1271.43, 61.607 )

[node name="enemy89" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1371.43, 61.607 )

[node name="enemy90" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1471.43, 61.607 )

[node name="enemy11" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 74.1071, 161.607 )

[node name="enemy12" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 174.107, 161.607 )

[node name="enemy13" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 274.107, 161.607 )

[node name="enemy14" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 374.107, 161.607 )

[node name="enemy15" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 474.107, 161.607 )

[node name="enemy16" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 574.107, 161.607 )

[node name="enemy17" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 674.107, 161.607 )

[node name="enemy18" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 774.107, 161.607 )

[node name="enemy19" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 874.107, 161.607 )

[node name="enemy20" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 974.107, 161.607 )

[node name="enemy81" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1075, 161.607 )

[node name="enemy82" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1175, 161.607 )

[node name="enemy83" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1275, 161.607 )

[node name="enemy84" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1375, 161.607 )

[node name="enemy85" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1475, 161.607 )

[node name="enemy21" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 74.1071, 261.607 )

[node name="enemy22" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 174.107, 261.607 )

[node name="enemy23" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 274.107, 261.607 )

[node name="enemy24" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 374.107, 261.607 )

[node name="enemy25" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 474.107, 261.607 )

[node name="enemy26" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 574.107, 261.607 )

[node name="enemy27" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 674.107, 261.607 )

[node name="enemy28" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 774.107, 261.607 )

[node name="enemy29" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 874.107, 261.607 )

[node name="enemy30" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 974.107, 261.607 )

[node name="enemy76" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1072.32, 261.607 )

[node name="enemy77" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1172.32, 261.607 )

[node name="enemy78" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1272.32, 261.607 )

[node name="enemy79" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1372.32, 261.607 )

[node name="enemy80" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1472.32, 261.607 )

[node name="enemy31" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 74.1071, 361.607 )

[node name="enemy32" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 174.107, 361.607 )

[node name="enemy33" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 274.107, 361.607 )

[node name="enemy34" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 374.107, 361.607 )

[node name="enemy35" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 474.107, 361.607 )

[node name="enemy36" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 574.107, 361.607 )

[node name="enemy37" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 674.107, 361.607 )

[node name="enemy38" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 774.107, 361.607 )

[node name="enemy39" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 874.107, 361.607 )

[node name="enemy40" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 974.107, 361.607 )

[node name="enemy71" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1074.11, 361.607 )

[node name="enemy72" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1174.11, 361.607 )

[node name="enemy73" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1274.11, 361.607 )

[node name="enemy74" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1374.11, 361.607 )

[node name="enemy75" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1474.11, 361.607 )

[node name="enemy41" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 74.1071, 461.607 )

[node name="enemy42" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 174.107, 461.607 )

[node name="enemy43" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 274.107, 461.607 )

[node name="enemy44" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 374.107, 461.607 )

[node name="enemy45" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 474.107, 461.607 )

[node name="enemy46" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 574.107, 461.607 )

[node name="enemy47" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 674.107, 461.607 )

[node name="enemy48" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 774.107, 461.607 )

[node name="enemy49" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 874.107, 461.607 )

[node name="enemy50" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 974.107, 461.607 )

[node name="enemy66" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1073.21, 461.607 )

[node name="enemy67" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1173.21, 461.607 )

[node name="enemy68" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1273.21, 461.607 )

[node name="enemy69" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1373.21, 461.607 )

[node name="enemy70" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1473.21, 461.607 )

[node name="enemy51" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 74.1071, 561.607 )

[node name="enemy52" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 174.107, 561.607 )

[node name="enemy53" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 274.107, 561.607 )

[node name="enemy54" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 374.107, 561.607 )

[node name="enemy55" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 474.107, 561.607 )

[node name="enemy56" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 574.107, 561.607 )

[node name="enemy57" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 674.107, 561.607 )

[node name="enemy58" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 774.107, 561.607 )

[node name="enemy59" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 874.107, 561.607 )

[node name="enemy60" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 974.107, 561.607 )

[node name="enemy61" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1075, 561.607 )

[node name="enemy62" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1175, 561.607 )

[node name="enemy63" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1275, 561.607 )

[node name="enemy64" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1375, 561.607 )

[node name="enemy65" parent="." groups=["enemy_group2"] instance=ExtResource( 1 )]
position = Vector2( 1475, 561.607 )
